<package format="2">

    <name>python_tutorial</name>
    <version>0.0.1</version>
    <description>Template code for python tutorial</description>
    <maintainer email="graeme.best@uts.edu.au">Graeme Best</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rospy</depend>
    <depend>tf</depend>
    <depend>std_msgs</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rviz</exec_depend>

</package>
